--- a/style.css
+++ b/style.css
@@ -21,7 +21,12 @@ margin-right: -5px;
 .btn:hover{
     cursor: pointer;
 }
+.navbar-nav .nav-link:hover {
+  color: #007bff !important;
+  font-weight: bolder !important ; 
+  font-size: 20px !important;
 
+}
 
 /* .hero-img{
 width: 260px;
@@ -50,6 +55,14 @@ width: 260px;
     background-color: #EEF1F7;
     min-height: 80vh;
 }
+
+ .effect:hover {
+  transform:  scale(1.07) !important  ;
+   background-color:blue !important;
+   box-shadow: 0 12px 30px rgba(0, 0, 255, 0.2) !important; 
+} 
+
+
 
 
 
